feat(UI): add navigation block UI

--- a/index.html
+++ b/index.html
@@ -12,7 +12,120 @@
     <link rel="shortcut icon" href="#">
 </head>
 <body>
-    
+    <div class="app">
+        <div class="face-app">
+            <div class="nav hion-on-mobile">
+                <div class="nav_label">
+                    <div class="nav_label--logo">
+                        <img class="nav_label--logo_img" src="https://static-zmp3.zadn.vn/zmp3_rpt/images/logo-mp3.svg" alt="" srcset="">
+                    </div>
+                    <div class="nav_label--sidebar_items">
+                        <div class="nav_label--sidebar_link active">
+                            <li class="nav_label--sidebar_link--tag">
+                                <i class="fab icon-nav_label icon_add_big fa-itunes"></i>
+                                <a class="nav_label--sidebar_item">Cá Nhân</a>
+                            </li>
+                        </div>
+                        <div class="nav_label--sidebar_link">
+                             <li class="nav_label--sidebar_link--tag">           
+                                 <i class="fas icon-nav_label fa-record-vinyl"></i>
+                                 <a class="nav_label--sidebar_item">Khám Phá</a>
+                            </li>
+                        </div>
+                        <div class="nav_label--sidebar_link">
+                             <li class="nav_label--sidebar_link--tag">                               
+                                 <i class="fab icon-nav_label fa-facebook-messenger"></i>
+                                 <a class="nav_label--sidebar_item">#zingchart</a>
+                            </li>
+                        </div>
+                        <div class="nav_label--sidebar_link">
+                             <li class="nav_label--sidebar_link--tag">                                
+                                 <i class="fas icon-nav_label fa-radiation-alt"></i>
+                                 <a class="nav_label--sidebar_item">Radio</a>
+                            </li>
+                        </div>
+                        <div class="nav_label--sidebar_link">
+                             <li class="nav_label--sidebar_link--tag">                                
+                                 <i class="fas icon-nav_label fa-rss"></i>
+                                 <a class="nav_label--sidebar_item">Theo dõi</a>
+                            </li>
+                        </div>
+
+                        <div class="nav_label--sidebar_boder"></div>
+
+                        <div class="nav_label--sidebar_croller">
+                            <div class="nav_label--sidebar_link">
+                                <li class="nav_label--sidebar_link--tag"> 
+                                    <i class="fas icon-nav_label fa-music"></i>
+                                    <a class="nav_label--sidebar_item">Nhạc mới </a>
+                                </li> 
+                            </div>
+                            <div class="nav_label--sidebar_link">
+                                <li class="nav_label--sidebar_link--tag"> 
+                                    <i class="fas icon-nav_label fa-icons"></i>
+                                    <a class="nav_label--sidebar_item">Thể loại</a>
+                                </li> 
+                            </div>
+                            <div class="nav_label--sidebar_link">
+                                <li class="nav_label--sidebar_link--tag"> 
+                                          <i class="fas icon-nav_label fa-star"></i>
+                                          <a class="nav_label--sidebar_item">Top 100</a>
+                                </li> 
+                            </div>
+                            <div class="nav_label--sidebar_link">
+                                <li class="nav_label--sidebar_link--tag"> 
+                                          <i class="fas icon-nav_label icon_add_big fa-caret-square-right"></i>
+                                          <a class="nav_label--sidebar_item">Music Video</a>
+                                </li> 
+                            </div>
+                            <li class="nav_label--sidebar_link--tag"> 
+                                    <div class="nav_label--sidebar_banner">
+                                        <div class="nav_label--sidebar_banner--text">Nghe nhạc không quảng cáo cùng kho nhạc VIP</div>
+                                        <div class="nav_label--sidebar_banner--btn">MUA VIP</div>
+                                    </div>
+                            </li>
+                            <div class="nav_label--sidebar_libary">
+                                <div class="nav_label--sidebar_name">
+                                    <div class="nav_label--sidebar_name--text">Thư Viện</div>
+                                    <li class="nav_label--sidebar_name--icon_tag">
+                                        <i class="fas fa-pen nav_label--sidebar_name--icon"></i>
+                                    </li>
+                                </div>
+                                <div class="nav_label--sidebar_link--libary">
+                                    <div class="nav_label--sidebar_link">
+                                        <li class="nav_label--sidebar_link--libary_img">
+                                            <img src="https://zjs.zadn.vn/zmp3-desktop/releases/v1.0.13/static/media/my-song.cf0cb0b4.svg">
+                                            <a class="nav_label--sidebar_item">Bài hát</a>
+                                        </li>
+                                    </div>
+                                    <div class="nav_label--sidebar_link">
+                                        <li class="nav_label--sidebar_link--libary_img">
+                                            <img src="https://zjs.zadn.vn/zmp3-desktop/releases/v1.0.13/static/media/my-playlist.7e92a5f0.svg">
+                                            <a class="nav_label--sidebar_item">Playlist</a>
+                                        </li>
+                                    </div>
+                                    <div class="nav_label--sidebar_link">
+                                        <li class="nav_label--sidebar_link--libary_img">
+                                            <img src="https://zjs.zadn.vn/zmp3-desktop/releases/v1.0.13/static/media/my-history.374cb625.svg">
+                                            <a class="nav_label--sidebar_item">Gần đây</a>
+                                        </li>
+                                    </div>
+                                </div>                         
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="nav_label--sidebar_creat ">
+                    <div class="nav_label--sidebar_creat--add">
+                        <i class="fas icon-nav_label fa-plus"></i>
+                        <a class="nav_label--sidebar_item">Tạo playlist mới</a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
