feat(UI): add footer block UI

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="container_profile--name">Hồ Anh Tuấn</div>  
+                        <div class="container_profile--name">Zing mp3</div>  
                     </div>
                     <div class="container_profile--head">
                         <div class="container_profile--head_list">
@@ -7096,6 +7096,136 @@
                     <audio id="audio" src=""></audio>
                 </div>
 
+            </div>
+        </div>
+        
+        <div class="listen  hion-on-mobile">
+            <div class="media ">
+                <div class="media_cd" style="background-image: url(https://photo-resize-zmp3.zadn.vn/w240_r1x1_jpeg/cover/1/b/9/a/1b9a056a527b7c7409e890a48bb7fac6.jpg)">
+                    <!-- <img src="https://photo-resize-zmp3.zadn.vn/w240_r1x1_jpeg/cover/1/b/9/a/1b9a056a527b7c7409e890a48bb7fac6.jpg"> -->
+                </div>
+                <div class="media_title">
+                    <marquee  class="media_title--name"  scrolldelay="130">Covid Nhanh Đi Đi</marquee>
+                    <a class="media_title--author">K-ICM, APJ, Huyền Thanh Môn ...</a>
+                    <li class="media_title--iconMobile hion-on-pc hion-on-table  ">
+                        <i class="fas fa-angle-down"></i>
+                    </li>
+                </div>
+                <div class="media_icon">
+                    <li class="meadia_icon_more heart">
+                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart"></i>
+                    </li>
+                    <li class="meadia_icon_more">
+                        <i class="fas fa-ellipsis-h"></i>
+                    </li>
+                </div>
+            </div>
+            <div class="controls ">
+                <div class="controls_player">
+                        <li class="controls_player--icon">
+                            <i class="fas fa-random"></i>
+                        </li>
+                        <li class="controls_player--icon">
+                            <i class="fas fa-step-backward"></i>
+                        </li>
+                        <li class="controls_player--icon">
+                            <i class="far fa-play-circle"></i>
+                            <i class="far fa-pause-circle"></i>
+                        </li>
+                        <li class="controls_player--icon">
+                            <i class="fas fa-step-forward"></i>
+                        </li>
+                        <li class="controls_player--icon">
+                            <i class="fas fa-redo"></i>
+                        </li>
+                </div>
+                <div class="controls_time">
+                    <span class="controls_time--right">00.00</span>
+                    <input id="progress" class="controls_time--range" value="0" type="range" step="1" min="0" max="100">
+                    <span class="controls_time--left">03.22</span>
+                </div>
+            </div>
+            <div class="controls_extend ">
+                <div class="controls_extend--lever">
+                    <li class="controls_extend--lever_item hion-on-mobile-table">
+                        <i class="fab fa-youtube-square"></i>
+                        <!-- <i class="fab fa-vimeo"></i> -->
+                    </li>
+                    <li class="controls_extend--lever_item  hion-on-mobile-table">
+                        <i class="fas fa-microphone"></i>
+                    </li>
+                    <li class="controls_extend--lever_item">
+                        <i class="fas fa-volume-up"></i>
+                    </li>
+                    <li class="controls_extend--lever_item_range">
+                        <input id="controls_lever_range" type="range" class="range_volum" value="100" step="1" min="0" max="100">
+                    </li>
+                    <li class="controls_extend--lever_item ">
+                        <i class="fas fa-expand-alt"></i>
+                    </li>
+                    <li class="controls_extend--lever_item_boder">
+                    </li>
+                    <li class="controls_extend--lever_item">
+                        <i class="fas fa-sliders-h"></i>
+                    </li>
+                </div>
+            </div>
+        </div>
+
+        <input id="progress_mobile" class="controls_time--range_mobile  hion-on-pc hion-on-table" value="" type="range" step="1" min="0" max="100">
+        <div class="listen-mobile hion-on-pc hion-on-table ">
+            <div class="listen_mobile--player">
+                <div class="listen_mobile--player_right">
+                    <div class="listen_mobile--player_right--img" style="background-image: url(./assets/img/imgage_interface.jpg)">
+                    </div>
+                    <div class="listen_mobile--player_right--song">
+                        <span class="listen_mobile--player_right--song_name">
+                            Night Of the Piano 12
+                        </span>
+                        <span class="listen_mobile--player_right--authur">
+                            <a>K_icm, </a>
+                            <a>MTP, </a>
+                            <a>Hương Ly</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="listen_mobile--player_left">
+                    <li class="listen_mobile--player_left--icon">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                    </li>
+                    <li class="listen_mobile--player_left--icon">
+                        <i class="fas fa-play"></i>
+                        <i class="fas fa-pause"></i>
+                    </li>
+                    <li class="listen_mobile--player_left--icon">
+                        <i class="fas fa-step-forward"></i>
+                    </li>
+                </div>
+            </div>
+
+            <div class="listen_mobile--link">
+                <li class="listen_mobile--link_tag active">
+                    <i class="fab icon_add_big fa-itunes"></i>
+                    <a class="listen_mobile--link_tag--item">Cá Nhân</a>
+                </li>
+                <li class="listen_mobile--link_tag">           
+                        <i class="fas fa-record-vinyl"></i>
+                        <a class="listen_mobile--link_tag--item">Khám Phá</a>
+                </li>
+                <li class="listen_mobile--link_tag">                               
+                        <i class="fab fa-facebook-messenger"></i>
+                        <a class="listen_mobile--link_tag--item">#zingchart</a>
+                </li>
+                <li class="listen_mobile--link_tag">                                
+                        <i class="fas fa-radiation-alt"></i>
+                        <a class="listen_mobile--link_tag--item">Radio</a>
+                </li>
+                <li class="listen_mobile--link_tag">                                
+                        <i class="fas fa-rss"></i>
+                        <a class="listen_mobile--link_tag--item">Theo dõi</a>
+                </li>
             </div>
         </div>
     </div>
